--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,42 +1,33 @@
  .App {
   text-align: center;
+  /* background-color: #ECF2FF; */
+  height: 100vh;
 }
+
+/* .navbar {
+  background-color: #3E54AC;
+}
+
+.navbar-brand{
+  color: orange;
+}
+
+.navbar a {
+  color:white;
+  text-decoration: none
+} */
+
+/* .btn-theme {
+  background-color: #BFACE2;
+  color: #655DBB;
+} */
+
+/* .btn-test {
+  background-color: #BFACE2;
+  color: #3E54AC;
+  --bs-btn-hover-bg: #655DBB
+} */
 
 .card {
   border: 1px solid black
 }
-/*
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
